[project]
name = "or-puzzles"
version = "0.1.0"
description = "Some puzzles solved using ortools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ortools>=9.10.4067",
]

[project.scripts]
alphabet = "or_puzzles.alphabet:solve_puzzle"
board = "or_puzzles.board:main"
day31 = "or_puzzles.day31:solve"
nonogram = "or_puzzles.nonogram:main"
puzzle = "or_puzzles.puzzle:solve_puzzle"
security-through-obscurity = "or_puzzles.security_through_obscurity:solve"

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.11.1",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
files = "."
strict = true
enable_error_code = [
  "deprecated",
  "explicit-override",
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]
warn_unreachable = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",    # mccabe
  "COM",    # flake8-commas
  "CPY",    # flake8-copyright
  "D",      # pydocstyle
  "DOC",    # pydoclint
  "ERA",    # eradicate
  "PD",     # pandas-vet
  "PLR",    # pylint-refactor
  "T20",    # flake8-print
  "ANN401", # any-type
  "E203",   # whitespace before ':'
  "S101",   # assert-used
]
extend-safe-fixes = [
  "TC", # flake8-type-checking
]
unfixable = [
  "F841", # unused-variable
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
