[project]
name = "or-puzzles"
version = "0.1.0"
description = "Some puzzles solved using ortools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ortools>=9.15.6755",
]

[project.scripts]
alphabet = "or_puzzles.alphabet:solve_puzzle"
board = "or_puzzles.board:main"
day31 = "or_puzzles.day31:solve"
nonogram = "or_puzzles.nonogram:main"
security-through-obscurity = "or_puzzles.security_through_obscurity:solve"

[build-system]
requires = ["uv-build>=0.5"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",    # mccabe
  "COM",    # flake8-commas
  "CPY",    # flake8-copyright
  "D",      # pydocstyle
  "DOC",    # pydoclint
  "ERA",    # eradicate
  "PD",     # pandas-vet
  "PLR",    # pylint-refactor
  "T20",    # flake8-print
  "ANN401", # any-type
  "E203",   # whitespace before ':'
  "S101",   # assert-used
]
extend-safe-fixes = [
  "TC", # flake8-type-checking
]
unfixable = [
  "F841", # unused-variable
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
